Fixed heading spacing

--- a/src/templates/project.scss
+++ b/src/templates/project.scss
@@ -276,6 +276,10 @@
   &__checklist {
     margin: 160px 0;
 
+    &-heading {
+      margin: 10px 0 20px;
+    }
+
     &-list {
       margin: 40px 0 0;
       padding: 0;
